# DevOps-Course-Bank-API

./: pyproject.toml
bank_api/: app.py  bank.py  bank_report.py
tests/: test_app.py  test_bank.py  test_bank_report.py
